added users routes
